--- a/style/theme.less
+++ b/style/theme.less
@@ -48,6 +48,16 @@ body{
         color:@headerFontColor;
       }
     }
+    .tool-bar{
+      .tool-bar-setting{
+        .dialog-user{
+          background:@displayAreaBackground;
+          :before{
+            background:@displayAreaBackground;
+          }
+        }
+      }
+    }
   }
 
   #main{
