--- a/style/index.css
+++ b/style/index.css
@@ -452,11 +452,12 @@ body #footer .progress-container {
   margin: 0 1%;
   height: 6px;
   border-radius: 3px;
+  cursor: pointer;
 }
 body #footer .progress-container .play-progress {
   height: 6px;
   border-radius: 3px;
-  width: 0%;
+  width: 0;
 }
 body #footer .progress-container .progress-point {
   box-sizing: border-box;
