--- a/style/index.less
+++ b/style/index.less
@@ -462,10 +462,11 @@ body{
       margin:0 1%;
       height:6px;
       border-radius:3px;
+      cursor:pointer;
       .play-progress{
         height:6px;
         border-radius:3px;
-        width:0%;
+        width:0;
       }
       .progress-point{
         box-sizing:border-box;
