--- a/style/index.less
+++ b/style/index.less
@@ -598,6 +598,13 @@ body{
     .footer-right{
       width:300px;
       height:48px;
+      .volume-silence{
+        display:inline-block;
+        box-sizing:border-box;
+        height:48px;
+        line-height:48px;
+        width:15px;
+      }
       .progress-sound{
         width:120px;
       }
