--- a/style/index.css
+++ b/style/index.css
@@ -119,7 +119,7 @@ body #header .tool-bar .tool-bar-setting .dialog {
   display: none;
   width: 250px;
   height: 400px;
-  z-index: 10;
+  z-index: 12;
   top: 50px;
   left: -60px;
   position: absolute;
@@ -252,11 +252,12 @@ body #main .music-stage {
   overflow-x: hidden;
   overflow-y: auto;
   background: #FAFAFA;
-  z-index: 20;
+  z-index: 3;
   display: none;
 }
 body #main .music-stage .shrink-stage {
   position: fixed;
+  cursor: pointer;
   top: 80px;
   right: 30px;
   width: 50px;
@@ -286,7 +287,7 @@ body #main .music-stage .stage-container .canvas-area .mid-disc {
   transform: translate(-50%, -50%);
   width: 200px;
   height: 200px;
-  border: 50px solid rgba(30, 30, 30, 0.8);
+  border: 50px solid #282828;
   border-radius: 50%;
 }
 body #main .music-stage .stage-container .canvas-area .out-disc {
@@ -294,9 +295,9 @@ body #main .music-stage .stage-container .canvas-area .out-disc {
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  width: 310px;
-  height: 310px;
-  border: 10px solid rgba(200, 200, 200, 0.3);
+  width: 300px;
+  height: 300px;
+  border: 15px solid rgba(200, 200, 200, 0.3);
   border-radius: 50%;
 }
 body #main .music-stage .stage-container .canvas-area #drawArea {
