--- a/style/index.less
+++ b/style/index.less
@@ -113,7 +113,7 @@ body{
           display:none;
           width:250px;
           height:400px;
-          z-index:10;
+          z-index:12;
           top:50px;
           left:-60px;
           position:absolute;
@@ -266,10 +266,11 @@ body{
       overflow-x:hidden;
       overflow-y:auto;
       background:#FAFAFA;
-      z-index:20;
+      z-index:3;
       display:none;
       .shrink-stage{
         position:fixed;
+        cursor:pointer;
         top:80px;
         right:30px;
         width:50px;
@@ -293,15 +294,15 @@ body{
             left:50%;top:50%;
             transform:translate(-50%,-50%);
             width:200px;height:200px;
-            border:50px solid rgba(30,30,30,0.8);
+            border:50px solid rgb(40,40,40);
             border-radius:50%;
           }
           .out-disc{
             position:absolute;
             left:50%;top:50%;
             transform:translate(-50%,-50%);
-            width:310px;height:310px;
-            border:10px solid rgba(200,200,200,0.3);
+            width:300px;height:300px;
+            border:15px solid rgba(200,200,200,0.3);
             border-radius:50%;
           }
           #drawArea{
