--- a/style/index.less
+++ b/style/index.less
@@ -259,6 +259,7 @@ body{
     height:600px;
     //音乐播放去样式
     .music-stage{
+      background:#fafafa;
       background:url("../images/music_area_bg.jpg") no-repeat 0 0;
       background-size:100%;
       position:absolute;
