--- a/public/style/index.less
+++ b/public/style/index.less
@@ -89,15 +89,62 @@ body{
       margin-right:20px;
       height:50px;
       .tool-bar-setting{
-        padding:0 20px;
-        width:240px;
+        padding:0 ;
+        width:280px;
         li{
-          float:left;
-          margin-left:25px;
+          float:right;
+          margin-right:25px;
           position:relative;
         }
         i.fa{
           cursor:pointer;
+        }
+        .form-login{
+          padding-top:100px;
+          ::-webkit-input-placeholder { color:#ddd; font-size:12px;}
+          ::-moz-placeholder { color:#ddd; font-size:12px; } /* firefox 19+ */
+          :-ms-input-placeholder { color:#ddd; font-size:12px;} /* ie */
+          input:-moz-placeholder { color:#ddd; font-size:12px;}
+          input{
+            display:block;
+            margin:0 auto;
+            outline:none;
+            border:1px solid #ddd;
+            width:200px;
+            height:40px;
+            line-height:40px;
+            box-sizing:border-box;
+            font-size:14px;
+          }
+          #uname{
+            padding-left:20px;
+            border-top-left-radius:4px;
+            border-top-right-radius:4px;
+          }
+          #upwd{
+            padding-left:20px;
+            border-top:none;
+            border-bottom-left-radius:4px;
+            border-bottom-right-radius:4px;
+          }
+          #loginMsg{
+            width:200px;
+            height:40px;
+            line-height:40px;
+            margin:0 auto;
+            color:#EA4848;
+          }
+          #loginBtn{
+            border:none;
+            border-radius:4px;
+            background:#EA4848;
+            cursor:pointer;
+            height:40px;
+            color:#fff;
+          }
+          #loginBtn:hover{
+            background:#C62F2F;
+          }
         }
         .dialog:before{
           content:'';
@@ -130,6 +177,7 @@ body{
             padding:30px 15px 0 15px;
             box-sizing:border-box;
             li{
+              margin:0;
               float:left;
               width:30%;
               margin-left:3%;
@@ -206,7 +254,7 @@ body{
         .dialog-control.active+.dialog{
           display:block;
         }
-        li:first-child{
+        li:last-child{
           a#headPortrait{
             float:left;
             width:30px;
